Crash using the Extrude tool and Snap Base #117191

Closed
opened 2024-01-17 06:04:27 +01:00 by TheRedWaxPolice · 1 comment

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.1.0-alpha+main.35028d9480b0-windows.amd64-release
Worked: Dunno...

Short description of error
Just found a random crash when using the Extrude tool and pressing B (Set Snap Base)

Exact steps for others to reproduce the error

  • Launch Blender
  • Go to Edit Mode
  • Choose the Extrude tool
  • Click and drag the yellow gizmo to extrude
  • While still dragging the yellow gizmo, press B (Set Snap Base)

Crash...

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.1.0-alpha+main.35028d9480b0-windows.amd64-release Worked: Dunno... **Short description of error** Just found a random crash when using the Extrude tool and pressing B (Set Snap Base) **Exact steps for others to reproduce the error** - Launch Blender - Go to Edit Mode - Choose the Extrude tool - Click and drag the yellow gizmo to extrude - While still dragging the yellow gizmo, press B (Set Snap Base) Crash... <video controls="" src="https://media.discordapp.net/attachments/587761956526751784/1197041797633949706/crash0001-0497.mp4"></video>
TheRedWaxPolice added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-17 06:04:28 +01:00
Member

Thanks for the report. Can confirm in 4.0 as well

Thanks for the report. Can confirm in 4.0 as well
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-01-17 06:55:12 +01:00
Pratik Borhade self-assigned this 2024-01-17 06:59:28 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-17 12:28:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117191
No description provided.