Fix #117191: Crash using the Extrude tool and Snap Base

`GIZMO_GT_button_2d` has no modal/custom_modal callback function
defined hence the crash due to calling `modal_fn()`

Pull Request: https://projects.blender.org/blender/blender/pulls/117194